[feat] - breezSdk 로 전환

--- a/BoltZap-App/.vscode/settings.json
+++ b/BoltZap-App/.vscode/settings.json
@@ -4,5 +4,11 @@
     "source.fixAll.eslint": "explicit"
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ]
 }
