--- a/BoltZap-App/package.json
+++ b/BoltZap-App/package.json
@@ -11,12 +11,12 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@breeztech/react-native-breez-sdk-liquid": "^0.11.11",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native/new-app-screen": "0.83.1",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
-    "ldk-node-rn": "^0.3.1",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-fs": "^2.20.0",
