[feat] - BREEZ_API_KEY 환경변수로 변환

--- a/BoltZap-App/package.json
+++ b/BoltZap-App/package.json
@@ -19,6 +19,7 @@
     "buffer": "^6.0.3",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-config": "^1.6.1",
     "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^2.0.0",
     "react-native-keychain": "^10.0.0",
