--- a/BoltZap-App/package.json
+++ b/BoltZap-App/package.json
@@ -23,12 +23,16 @@
     "react-native": "0.83.1",
     "react-native-config": "^1.6.1",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.30.0",
     "react-native-get-random-values": "^2.0.0",
+    "react-native-keyboard-controller": "^1.20.6",
     "react-native-keychain": "^10.0.0",
     "react-native-qrcode-svg": "^6.3.21",
+    "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.20.0",
     "react-native-svg": "^15.15.1",
+    "react-native-worklets": "^0.7.2",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
