--- a/BoltZap-App/package.json
+++ b/BoltZap-App/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.28",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
+    "phosphor-react-native": "^3.0.2",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-config": "^1.6.1",
