--- a/BoltZap-App/package.json
+++ b/BoltZap-App/package.json
@@ -34,7 +34,8 @@
     "react-native-screens": "^4.20.0",
     "react-native-svg": "^15.15.1",
     "react-native-worklets": "^0.7.2",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
