--- a/BoltZap-App/package.json
+++ b/BoltZap-App/package.json
@@ -22,6 +22,7 @@
     "phosphor-react-native": "^3.0.2",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-bootsplash": "^7.0.1",
     "react-native-config": "^1.6.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.30.0",
