--- a/BoltZap-App/ios/BoltZap/Info.plist
+++ b/BoltZap-App/ios/BoltZap/Info.plist
@@ -37,6 +37,8 @@
 	<string></string>
 	<key>RCTNewArchEnabled</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>QR 코드를 스캔하기 위해 카메라 권한이 필요합니다.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>BootSplash</string>
 	<key>UIRequiredDeviceCapabilities</key>
