--- a/BoltZap-App/package.json
+++ b/BoltZap-App/package.json
@@ -34,7 +34,9 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.20.0",
     "react-native-svg": "^15.15.1",
+    "react-native-vision-camera": "^4.7.3",
     "react-native-worklets": "^0.7.2",
+    "react-native-worklets-core": "^1.6.2",
     "styled-components": "^6.1.19",
     "zustand": "^5.0.10"
   },
