--- a/BoltZap-App/package.json
+++ b/BoltZap-App/package.json
@@ -17,6 +17,7 @@
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
+    "@react-navigation/stack": "^7.6.16",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "phosphor-react-native": "^3.0.2",
