--- a/BoltZap-App/android/gradle.properties
+++ b/BoltZap-App/android/gradle.properties
@@ -42,3 +42,6 @@ hermesEnabled=true
 # This allows your app to draw behind system bars for an immersive UI.
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
+
+# Specifies the location of the Java home variable.
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
