--- a/BoltZap-App/package.json
+++ b/BoltZap-App/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "android": "export JAVA_HOME=\"/Applications/Android Studio.app/Contents/jbr/Contents/Home\" && react-native run-android",
+    "build:android": "cd android && export JAVA_HOME=\"/Applications/Android Studio.app/Contents/jbr/Contents/Home\" && ./gradlew assembleRelease",
+    "bundle:android": "cd android && export JAVA_HOME=\"/Applications/Android Studio.app/Contents/jbr/Contents/Home\" && ./gradlew bundleRelease",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
