git ignore 설정 추가

--- a/BoltZap-App/.gitignore
+++ b/BoltZap-App/.gitignore
@@ -22,6 +22,8 @@ xcuserdata/
 android/.gradle/
 android/app/build/
 android/build/
+android/gradle.properties
+android/app/*.keystore
 *.apk
 *.aab
 
