--- a/BoltZap-App/android/app/build.gradle
+++ b/BoltZap-App/android/app/build.gradle
@@ -94,15 +94,21 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('BOLTZAP_UPLOAD_STORE_FILE')) {
+                storeFile file(BOLTZAP_UPLOAD_STORE_FILE)
+                storePassword BOLTZAP_UPLOAD_STORE_PASSWORD
+                keyAlias BOLTZAP_UPLOAD_KEY_ALIAS
+                keyPassword BOLTZAP_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
